# xodium.org

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GUIDE.md  README.md  SECURITY.md  TASKS.txt  TODO.md  Trunk.toml  _config.ts  build.rs  deno.json  dev.ts  devcontainer.json  docker-compose.yml  eslint.config.mjs  fresh.config.ts  fresh.gen.ts  import_map.json  index.html  jsconfig.json  justfile  main.ts  package-lock.json  package.json  server.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  utils.ts  vite.config.ts  webpack.config.js  webpack.config.mjs  (+2 more)
.cargo/: config.toml
.devcontainer/: devcontainer.json
.docs/: README.md  SUMMARY.md
.github/: dependabot.yml  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: build.yml  build_app.yml  ci_cd.yml  deploy.yml  docker_publish.yml  enforce_branch.yml  enforce_pr_title.yml  quality.yml  rust.yml
.wrangler/deploy/: config.json
_fresh/: server.js
_fresh/server/: server-entry.mjs
assets/: styles.css
components/: button_primary.tsx  button_up.tsx  footer.tsx  grid.tsx  header.tsx  projectcard.tsx  version.tsx
components/icons/: github.tsx  repo.tsx  wiki.tsx
docs/: 12_i18n_evaluation.md  CNAME  README.md
islands/: Counter.tsx  header.tsx  projectgrid.tsx  teamcards.tsx  teamgrid.tsx  typewriter.tsx
lib/: github.ts  storage.ts
locales/: en.json
middleware/: redirects.ts
modules/: xodium.constants.ts  xodium.typewriter.ts  xodium.utils.github.ts  xodium.utils.localstorage.ts  xodium.utils.teamcards.ts  xodium.utils.teamcards.tsx
old/: deno.json  main.ts
old/components/: grid.tsx
old/css/: constants.css
old/islands/: header.tsx  projectgrid.tsx  typewriter.tsx
old/js/: constants.mjs
pages/: contact.html  contacts.html  index.html  manifest.json  projects.html  sitemap.xml  team.html
pages2/: index.html  package-lock.json  package.json
plugins/: github.ts
public/: 404.html  _headers  auth.md  manifest.json  robots.txt  sitemap.xml  style.css
routes/: _404.tsx  _app.tsx  index.tsx  login.tsx
scripts/: fetch-daisyui.ps1  fetch-daisyui.sh
src/: 404.html  404.vto  _config.ts  _data.ts  _middleware.ts  app.rs  app.vue  components.rs  dashboard.vto  database.ts  dev.ts  fresh.config.ts  fresh.gen.ts  github.rs  index.html  index.md  index.vto  lib.rs  main.rs  main.ts  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  sitemap.xml  team.html  utils.rs  vite.config.ts
src_old/: xodium.custom.css
static/: styles.css  xodium.custom.css
utils/: constants.ts  github.ts  kvstore.ts  utils.ts
(+199 files in other folders)
