[package]
name = "xodiumweb"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.17", features = ["csr"] }
phf = { version = "0.13.1", features = ["macros"] }
gloo-net = { version = "0.6", features = ["http", "json"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Storage"] }

[target.'cfg(debug_assertions)'.dependencies]
console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
