[package]
name = "xodiumweb"
version = "0.0.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.17", features = ["csr"] }
wasm-bindgen = "0.2.114"
gloo-net = { version = "0.7", features = ["http", "json"] }
gloo-timers = { version = "0.4.0", features = ["futures"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Storage", "MediaQueryList", "Document", "Element", "HtmlElement", "Node", "console"] }
console_error_panic_hook = "0.1.7"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.cargo-machete]
ignored = ["wasm-bindgen"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
