[package]
name = "xodiumweb"
edition = "2024"
publish = false

[dependencies]
leptos = { version = "0.8.17", features = ["csr"] }
leptos_i18n = { version = "0.6.2", default-features = false, features = ["csr"] }
wasm-bindgen = "0.2.114"
gloo-net = { version = "0.7", features = ["http", "json"] }
gloo-timers = { version = "0.4.0", features = ["futures"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Storage", "MediaQueryList", "Document", "Element", "HtmlElement", "Node", "console", "IntersectionObserver", "IntersectionObserverInit", "IntersectionObserverEntry"] }
console_error_panic_hook = "0.1.7"

[build-dependencies]
leptos_i18n_build = "0.6.2"
serde_json = "1"
sha2 = "0.11"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.cargo-machete]
# wasm-bindgen is required at runtime by leptos/wasm-bindgen internals, but our
# code only accesses it through leptos re-exports (e.g. leptos::wasm_bindgen::JsCast).
# cargo-machete does not detect this indirect usage, so keep it ignored.
ignored = ["wasm-bindgen"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
